--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.layout {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr minmax(300px, 600px) 1fr;
+  grid-template-rows: auto 1fr auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  width: 100%;
+  padding: 10px 0;
+  background: #fff;
+  grid-column: 1/-1;
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  grid-column: 2/3;
+}
+
+footer {
+  grid-column: 1/-1;
+  background: #fff;
+}
+
+textarea,
+input,
+button {
+  outline: none;
 }
