--- a/src/components/edit-box/edit-box.component.css
+++ b/src/components/edit-box/edit-box.component.css
@@ -20,7 +20,7 @@
 .editable-box__input {
   align-self: stretch;
   background: inherit;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-size: 14px;
   font-weight: 400;
   font-style: italic;
