--- a/src/components/todo-app-input/todo-app-input.css
+++ b/src/components/todo-app-input/todo-app-input.css
@@ -18,7 +18,7 @@
 .pane__textarea {
   align-self: stretch;
   background: inherit;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-size: 14px;
   font-weight: 400;
   font-style: italic;
